On some sites the value corresponding to the placeholder month is "-1".

For cases where the first value associated with a placeholder is negative, Autofill now looks at the next value in order to fill the correct month.

A real life example is the credit card checkout at aa.com

BUG=598929
TEST=AutofillFieldTest

Review URL: https://codereview.chromium.org/1839763008

Cr-Commit-Position: refs/heads/master@{#384152}

Former-commit-id: f878d61e4fc8c403df8fd621339c2481df531ff0