components/autofill/core/browser/autofill_field_unittest.cc
@@ -562,6 +562,12 @@ TEST_F(AutofillFieldTest, FillSelectControlWithExpirationMonth) {
        NotNumericMonthsContentsWithPlaceholder()},
       // Values start at 1 after a placeholder.
       {{"?", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12"},
+       NotNumericMonthsContentsWithPlaceholder()},
+      // Values start at 0 after a negative number.
+      {{"-1", "0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11"},
+       NotNumericMonthsContentsWithPlaceholder()},
+      // Values start at 1 after a negative number.
+      {{"-1", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12"},
        NotNumericMonthsContentsWithPlaceholder()}};
 
   for (TestCase test_case : test_cases) {
